<?xml version="1.0"?>
<package format="2">
  <name>usv_surge_vel_contr</name>
  <version>0.0.0</version>
  <description>USV surge velocity controller</description>
  <maintainer email="bartboogmans@hotmail.com">Bart Boogmans</maintainer>
  <url type="website">https://github.com/RAS-Delft/USV_surge_velocity_controller</url>
  <author email="bartboogmans@hotmail.com">Bart Boogmans</author>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>  </export>
</package>
